k8s/test-ingress-nginx/myweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
  labels:
    app: myweb
spec:
  selector:
    matchLabels:
      app: myweb
  replicas: 2	
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: wangyanglinux/myapp:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  selector:
    app: myweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
